--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my third github repo
-
-    </title>
+    <title>my third github repo</title>
 </head>
 <body>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consequatur veniam, molestiae laborum distinctio temporibus eum nam qui vitae molestias saepe magnam quisquam quidem numquam, in nesciunt ipsum architecto adipisci iure, sunt velit quos natus. Omnis eum sed, assumenda ipsum labore laboriosam, iusto quisquam fugiat inventore unde rem, dolore ipsa?
 
     </p>
+    <br>
+    <img src="My First Website/images/dev.jpg">
+    <br>
+    <h3>hello devlopers</h3>
 </body>
 </html>
