--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consequatur veniam, molestiae laborum distinctio temporibus eum nam qui vitae molestias saepe magnam quisquam quidem numquam, in nesciunt ipsum architecto adipisci iure, sunt velit quos natus. Omnis eum sed, assumenda ipsum labore laboriosam, iusto quisquam fugiat inventore unde rem, dolore ipsa?
